# redes-logisticas-challenge-master

./: .gitignore  README.md  pyproject.toml
app/: datos.py  errores.py  modelo.py
tests/: test_modelo.py
