[tool.poetry]
name = "redes-logisticas-challenge"
packages = [
    { include = "app", from = "." }
]
version = "0.1.0"
description = ""
authors = ["Jesus Hincapie <jahlon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
